objects/Organization_Contact__e.object
<CustomObject>
    <description>This channel will be used for all Organization related Contact events. This includes Dealership Contact related events from the Dealership Contact record type, as well as affiliation events. Which will fire when an ACV User contact is associated with an Organization</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Organization Affiliation is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliation_Id__c</fullName>
        <description>Unique Id for this affiliation which is a combination of the Organization Id and ACV User Id</description>
        <label>Affiliation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_Sf_User_Id__c</fullName>
        <label>Changed By Sf User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_Username__c</fullName>
        <label>Changed By Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Guid__c</fullName>
        <description>Contact Record Guid</description>
        <label>Contact Guid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <description>This field will populate with the Unique Integer Id for the Contact record. For a Dealership Contact that will be the Dealership Contact Id field</description>
        <label>Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Dealership Contact Email</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Dealership Contact  Full Name</description>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <description>Dealership Contact associated Organization Id, this will populate with the Dealership Id</description>
        <label>Organization Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Dealership Contact Phone Number</description>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicated if this Contact affiliation is the Primary contact for the Organization</description>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if this affiliation should receive email communications</description>
        <label>Receive Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if this member should receive mobile push notifications</description>
        <label>Receive Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Legacy__c</fullName>
        <description>Dealership Contact Legacy Title</description>
        <label>Title Legacy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Dealership Contact Title</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of member. One of &apos;rep&apos;, &apos;admin&apos; or &apos;backoffice&apos;</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>This will be populated with the ACV User Id from the contact record associated with the affiliation</description>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_type__c</fullName>
        <description>Event Type</description>
        <label>event type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Organization Contact</label>
    <pluralLabel>Organization Contacts</pluralLabel>
</CustomObject>